--- a/searching/binary_search.ipynb
+++ b/searching/binary_search.ipynb
@@ -36,100 +36,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def binary_search(ordered_list, term):\n",
-    "    \"\"\"\n",
-    "    Iterative solution.\n",
-    "    \"\"\"\n",
-    "    size_of_list = len(ordered_list) - 1\n",
-    "    index_of_first_element = 0\n",
-    "    index_of_last_element = size_of_list\n",
-    "    \n",
-    "    while index_of_first_element <= index_of_last_element:\n",
-    "        mid_point = (index_of_first_element + index_of_last_element) // 2\n",
-    "        \n",
-    "        if ordered_list[mid_point] == term:\n",
-    "            return mid_point\n",
-    "        \n",
-    "        if term > ordered_list[mid_point]:\n",
-    "            index_of_first_element = mid_point + 1\n",
-    "        else:\n",
-    "            index_of_last_element = mid_point - 1\n",
-    "            \n",
-    "    if index_of_first_element > index_of_last_element:\n",
-    "        return 'Element not found'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = [6,7,8,9,10]\n",
-    "\n",
-    "binary_search(a, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def binary_search_r(ordered_list, first_element_index, last_element_index, term):\n",
-    "    \"\"\"\n",
-    "    Recursive solution.\n",
-    "    \"\"\"\n",
-    "    if last_element_index < first_element_index:\n",
-    "        return 'Element not found'\n",
-    "    else:\n",
-    "        mid_point = first_element_index + ((last_element_index - first_element_index) // 2)\n",
-    "        if ordered_list[mid_point] > term:\n",
-    "            return binary_search_r(ordered_list, first_element_index, mid_point - 1, term)\n",
-    "        elif ordered_list[mid_point] < term:\n",
-    "            return binary_search_r(ordered_list, mid_point + 1, last_element_index, term)\n",
-    "        else:\n",
-    "            return mid_point"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lst = [2, 4, 5, 12, 43, 54, 60, 77]\n",
-    "binary_search_r(lst, 0, 7, 4)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -181,6 +87,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Simpler\n",
+    "def binary_recursive(data, target, low, high):\n",
+    "    if low > high:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        mid = (low + high) // 2\n",
+    "        if target == data[mid]:\n",
+    "            return 1\n",
+    "        elif target < data[mid]:\n",
+    "            return binary_recursive(data, target, low, mid-1)\n",
+    "        else:\n",
+    "            return binary_recursive(data, target, mid+1, high)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
@@ -198,6 +124,28 @@
     "        else:  # elem > arr[mid]\n",
     "            start = mid + 1\n",
     "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Simpler\n",
+    "def binary_iterative(data, target):\n",
+    "    low = 0\n",
+    "    high = len(data) - 1\n",
+    "    \n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if target == data[mid]:\n",
+    "            return 1, mid\n",
+    "        elif target < data[mid]:\n",
+    "            high = mid - 1\n",
+    "        else:\n",
+    "            low = mid + 1\n",
+    "    return 0"
    ]
   },
   {
