--- a/sorting/quick_sort.ipynb
+++ b/sorting/quick_sort.ipynb
@@ -19,6 +19,7 @@
     "- [Wikipedia](https://en.wikipedia.org/wiki/Quick_sort)\n",
     "- [Medium.com article](https://medium.com/basecs/pivoting-to-understand-quicksort-part-1-75178dfb9313)\n",
     "- https://scotchka.github.io/blog/html/2018/11/08/stackless_quicksort.html<sup>[2]</sup>\n",
+    "- https://www.youtube.com/watch?v=RFyLsF9y83c\n",
     "\n",
     "<sub>[1] [code](https://github.com/joeyajames/Python/blob/master/Sorting%20Algorithms/quick_sort.py)<sub>\n",
     "    \n",
@@ -259,6 +260,37 @@
     "lst = [3, 2, 1, 4, 5]\n",
     "qsort_stackless(lst)\n",
     "lst"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def qs_r(data):\n",
+    "    if len(data) <= 1:\n",
+    "        return data\n",
+    "    \n",
+    "    pivot = data[random.randint(0, len(data) - 1)]\n",
+    "    less, equal, greater = [], [], []\n",
+    "\n",
+    "    for i in data:\n",
+    "        if i == pivot:\n",
+    "            equal.append(i)\n",
+    "        elif i < pivot:\n",
+    "            less.append(i)\n",
+    "        else:\n",
+    "            greater.append(i)\n",
+    "    \n",
+    "    return qs_r(less) + equal + qs_r(greater)"
    ]
   }
  ],
